test/integration/downstream/rstanarm/gqs/pretty.expected
  $ ../../../../../../install/default/bin/stanc --include-paths="../" --auto-format gen_quantities_mvmer.stan
Syntax error in 'gen_quantities_mvmer.stan', line 1, column 2 to column 7, parsing error:
   -------------------------------------------------
     1:    array[M] real mean_PPD;
           ^
     2:    array[intercept_type[1] > 0] real yAlpha1;
     3:    array[intercept_type[2] > 0] real yAlpha2;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
